# imgui-book-prototype

./: Cargo.toml  build.rs
docs/: book.toml
docs/src/: SUMMARY.md  second.md
imgui-book-shared/: Cargo.toml
imgui-book-shared/src/: lib.rs
src/: book_proc.rs  lib.rs  main.rs
